# spaceranger

./: README.md
lib/rust/: Cargo.toml
lib/rust/amino/: Cargo.toml
lib/rust/amino/src/: lib.rs
lib/rust/barcode/: Cargo.toml
lib/rust/barcode/src/: binned.rs  cell_name.rs  corrector.rs  io_utils.rs  lib.rs  short_string.rs  whitelist.rs
lib/rust/barcode_extensions/: Cargo.toml
lib/rust/barcode_extensions/src/: lib.rs
lib/rust/barcodes_folder/: Cargo.toml
lib/rust/barcodes_folder/src/: lib.rs
lib/rust/bazel_utils/: Cargo.toml
lib/rust/bazel_utils/src/: lib.rs
lib/rust/byteseq/: Cargo.toml
lib/rust/clonotype_assigner/: Cargo.toml
lib/rust/clonotype_assigner/src/: assigner.rs  fill_clonotype_info.rs  handle_no_clonotyping.rs  write_clonotype_outs.rs  write_concat_ref_outs.rs  write_consensus_bam.rs  write_consensus_txt.rs
lib/rust/cloud_utils/: Cargo.toml
lib/rust/cloud_utils/src/: lib.rs
lib/rust/cr_aggr/: Cargo.toml
lib/rust/cr_aggr/src/: create_antigen_clonotype_clustermap.rs  errors.rs  lib.rs  match_vdj_outs.rs  merge_molecules.rs  parse_aggr_csv.rs  process_vdj_proto.rs  run_enclone_aggr.rs  setup_vdj_aggr.rs  write_aggr_ann.rs  write_contig_proto.rs  write_ws_json.rs
lib/rust/cr_ana/: Cargo.toml
lib/rust/cr_ana/src/: lib.rs  louvain.rs  pca.rs  test_pipeline.rs  types.rs
lib/rust/cr_bam/: Cargo.toml
lib/rust/cr_bam/src/: bam.rs  bam_tags.rs  constants.rs
lib/rust/cr_h5/: Cargo.toml
lib/rust/cr_h5/src/: compare.rs  count_matrix.rs  feature_reference_io.rs  iter.rs  lib.rs  molecule_info.rs  probe_reference_io.rs
lib/rust/cr_lib/: Cargo.toml
lib/rust/cr_lib/src/: align_and_count_metrics.rs  align_homopolymer.rs  align_metrics.rs  aligner.rs  barcode_correction_metrics.rs  barcode_sort.rs  cell_annotation_ws_parameters.rs  fit_piecewise_linear_model.rs  gdna_utils.rs  lib.rs  macros.rs  make_shard_metrics.rs  parquet_file.rs  preflight.rs  probe_barcode_matrix.rs  read_level_multiplexing.rs  types.rs  utils.rs
lib/rust/cr_types/: Cargo.toml
lib/rust/cr_types/src/: aggr.rs  barcode_index.rs  bit_encode.rs  cell_annotation.rs  clonotype.rs  constants.rs  csv_parser.rs  filtered_barcodes.rs  lib.rs  mempool.rs  metrics_file.rs  probe_set.rs  rna_read.rs  sample_def.rs  serde_helpers.rs  spill_vec.rs  target_panel_summary.rs  types.rs  utils.rs  websummary.rs
lib/rust/cr_vdj/: Cargo.toml
lib/rust/cr_vdj/src/: clonotype_hist.rs  clonotype_table.rs  copy_vdj_reference.rs  create_barcode_csv.rs  lib.rs  make_vdj_plots.rs  matrix.rs  summarize_vdj_filters.rs
lib/rust/cr_websummary/: Cargo.toml
lib/rust/cr_websummary/src/: alert.rs  lib.rs  value.rs
lib/rust/cr_wrap/: Cargo.toml
lib/rust/cr_wrap/src/: chemistry_arg.rs  cloud.rs  create_bam_arg.rs  deprecated_os.rs  env.rs  fastqs.rs  lib.rs  mkfastq.rs  mkref.rs  mrp_args.rs  shared_cmd.rs  telemetry.rs  utils.rs
lib/rust/dzi/: Cargo.toml
lib/rust/dzi/src/: lib.rs
lib/rust/enclone_process/: Cargo.toml
lib/rust/enclone_process/src/: disintegrate.rs  doublets.rs  filter_umi.rs  flag_defective.rs  lib.rs  merge_onesies.rs  populate_features.rs  read_json.rs  some_filters.rs  split_candidate_clonotypes.rs  start.rs  weak_chains.rs
lib/rust/enclone_proto/: Cargo.toml
lib/rust/enclone_proto/src/: proto_io.rs  types.rs
lib/rust/equiv/: Cargo.toml
lib/rust/fast_utils/: Cargo.toml
lib/rust/fast_utils/src/: barcode_counter.rs  barcode_index.rs  compute_extra_multiplexing_metrics.rs  diff_exp.rs  feature_collection_geojson_validator.rs  filtered_barcodes.rs  gdna_analysis.rs  lib.rs  library_read_counter.rs  molecule_info.rs  multi_graph.rs
lib/rust/fastq_set/: Cargo.toml
lib/rust/fastq_set/src/: adapter_trimmer.rs  array.rs  background_iterator.rs  illumina_header_info.rs  lib.rs  metric_utils.rs  read_pair.rs  read_pair_iter.rs  read_pair_writer.rs  sample_index_map.rs  squality.rs  sseq.rs  utils.rs
lib/rust/graph_simple/: Cargo.toml
lib/rust/graph_simple/src/: lib.rs
lib/rust/hd_feature_slice/: Cargo.toml
lib/rust/hd_feature_slice/src/: coo_matrix.rs  io.rs  lib.rs  metadata.rs  scaling.rs  view.rs
lib/rust/hd_fiducial/: Cargo.toml
lib/rust/hd_fiducial/src/: lib.rs
lib/rust/hyperbase/: Cargo.toml
lib/rust/hyperbase/src/: lib.rs
lib/rust/io_utils/: Cargo.toml
lib/rust/jibes_o3/: Cargo.toml
lib/rust/jibes_o3/src/: lib.rs
lib/rust/json_report_derive/: Cargo.toml
lib/rust/kmer_lookup/: Cargo.toml
lib/rust/metric/: Cargo.toml
lib/rust/metric/src/: collections.rs  count_metric.rs  histogram.rs  lib.rs  mean_metric.rs
lib/rust/metric_derive/: Cargo.toml
lib/rust/multi/: Cargo.toml
lib/rust/multi/src/: barcode_sample_assignment.rs  lib.rs
lib/rust/multiconfig_converter/: Cargo.toml
lib/rust/multiconfig_converter/src/: lib.rs
lib/rust/par_proc/: Cargo.toml
lib/rust/par_proc/src/: lib.rs  par_proc.rs
lib/rust/parameters_toml/: Cargo.toml
lib/rust/parameters_toml/src/: lib.rs
lib/rust/pyanyhow/: Cargo.toml
lib/rust/pyanyhow/src/: lib.rs
lib/rust/roi/: Cargo.toml
lib/rust/roi/src/: lib.rs  qupath.rs
lib/rust/slide_design/: Cargo.toml
lib/rust/slide_design_o3/: Cargo.toml
lib/rust/slide_design_o3/src/: lib.rs
lib/rust/spatial/: Cargo.toml
lib/rust/spatial/src/: common_websummary_components.rs  lib.rs  square_bin_name.rs
lib/rust/stats/: Cargo.toml
lib/rust/stats/src/: lib.rs  nx.rs
lib/rust/string_utils/: Cargo.toml
lib/rust/string_utils/src/: lib.rs
lib/rust/transcriptome/: Cargo.toml
lib/rust/transcriptome/src/: lib.rs  parse_gtf.rs  python_gene_index.rs  transcript_index.rs  transcript_sequence.rs  transcriptome.rs
lib/rust/tx_annotation/: Cargo.toml
lib/rust/umi/: Cargo.toml
lib/rust/vdj_ann/: Cargo.toml
lib/rust/vdj_ann_ref/: Cargo.toml
lib/rust/vdj_asm_asm/: Cargo.toml
lib/rust/vdj_asm_utils/: Cargo.toml
lib/rust/vdj_filter_barcodes/: Cargo.toml
lib/rust/vdj_proto/: Cargo.toml
lib/rust/vdj_reference/: Cargo.toml
lib/rust/vdj_types/: Cargo.toml
lib/rust/vector_utils/: Cargo.toml
lib/rust/websummary_build/: Cargo.toml
lib/rust/websummary_derive/: Cargo.toml
(+453 files in other folders)
