[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.image]
features = ['png']
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.zip]
workspace = true

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'dzi'
publish = false
version = '0.1.0'
