[dependencies]
colorous = '1'

[dependencies.anyhow]
workspace = true

[dependencies.barcode]
path = '../barcode'

[dependencies.cr_h5]
path = '../cr_h5'

[dependencies.cr_types]
path = '../cr_types'

[dependencies.dzi]
path = '../dzi'

[dependencies.hdf5]
workspace = true

[dependencies.image]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.ndarray]
workspace = true

[dependencies.num-traits]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.slide_design]
path = '../slide_design'

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'hd_feature_slice'
publish = false
version = '0.1.0'
