[dependencies]
[dependencies.fiducial]
branch = 'main'
git = 'https://github.com/10XGenomics/image-analysis-rs'

[dependencies.numpy]
workspace = true

[dependencies.pyo3]
workspace = true

[lib]
crate-type = ['staticlib']
name = 'hd_fiducial'
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'hd_fiducial'
publish = false
version = '0.1.0'
