[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.geo]
workspace = true

[dependencies.geo-types]
workspace = true

[dependencies.geojson]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.ordered-float]
workspace = true

[dependencies.serde]
workspace = true

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'roi'
publish = false
version = '0.1.0'
