[[bin]]
name = 'spatial'
test = false

[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.barcode]
path = '../barcode'

[dependencies.bio]
workspace = true

[dependencies.cr_bam]
path = '../cr_bam'

[dependencies.cr_h5]
path = '../cr_h5'

[dependencies.cr_lib]
path = '../cr_lib'

[dependencies.cr_types]
path = '../cr_types'

[dependencies.cr_websummary]
path = '../cr_websummary'

[dependencies.docopt]
workspace = true

[dependencies.geo]
workspace = true

[dependencies.hd_feature_slice]
path = '../hd_feature_slice'

[dependencies.itertools]
workspace = true

[dependencies.martian]
workspace = true

[dependencies.martian-derive]
workspace = true

[dependencies.martian-filetypes]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.ndarray]
workspace = true

[dependencies.ndarray-npy]
workspace = true

[dependencies.parquet]
workspace = true

[dependencies.parquet_derive]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rand_distr]
workspace = true

[dependencies.roi]
path = '../roi'

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.shardio]
workspace = true

[dependencies.slide_design]
path = '../slide_design'

[dependencies.statrs]
workspace = true

[dependencies.tenx-websummary]
features = ['derive', 'image_base64_encode', 'image_proc']
workspace = true

[dependencies.thousands]
workspace = true

[dependencies.tiff]
workspace = true

[dependencies.websummary_build]
path = '../websummary_build'

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'spatial'
publish = false
version = '0.1.0'
